--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,22 @@
  limitations under the License.-->
 
 <!-- Display the static master list fragment -->
-<fragment
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <FrameLayout
+        android:id="@+id/containerFragmentA"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"/>
+    <fragment
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/master_list_fragment"
     android:name="com.example.android.android_me.ui.MasterListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
+</android.support.constraint.ConstraintLayout>
 
 
