--- a/app/src/main/res/layout/fragment_master_list.xml
+++ b/app/src/main/res/layout/fragment_master_list.xml
@@ -15,6 +15,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <TextView
+        android:text="Master List"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
     <!--<GridView-->
         <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
