--- a/app/src/main/res/layout-sw600dp/receipt_list_item.xml
+++ b/app/src/main/res/layout-sw600dp/receipt_list_item.xml
@@ -7,7 +7,11 @@
     android:orientation="horizontal"
     android:padding="2dp">
 
-
+    <TextView
+        android:text="Title:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
     <TextView
         android:id="@+id/receipt_title"
         android:layout_width="wrap_content"
