--- a/app/src/main/res/layout-sw600dp/receipt_list_item.xml
+++ b/app/src/main/res/layout-sw600dp/receipt_list_item.xml
@@ -1,5 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
+
+    <!--<TextView-->
+        <!--android:text="Title:"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--/>-->
+    <!--<TextView-->
+        <!--android:id="@+id/receipt_title"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--/>-->
+    <!--<ImageView-->
+        <!--android:adjustViewBounds="true"-->
+        <!--android:id="@+id/image_iv"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"/>-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,19 +28,15 @@
     android:orientation="horizontal"
     android:padding="2dp">
 
+
     <TextView
-        android:text="Title:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-    <TextView
+        android:adjustViewBounds="true"
         android:id="@+id/receipt_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <ImageView
         android:adjustViewBounds="true"
-        android:id="@+id/image_iv"
+        android:id="@+id/receipt_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </LinearLayout>
