--- a/app/src/main/res/layout/fragment_detail_step.xml
+++ b/app/src/main/res/layout/fragment_detail_step.xml
@@ -8,7 +8,11 @@
     android:orientation="vertical">
 
     <!--Media-->
-
+    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+        android:id="@+id/playerView"
+        android:focusable="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
     <!--Step Detail-->
 
 
