--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="2dp">
     <!--<android.support.v7.widget.RecyclerView-->
         <!--android:id="@+id/rv_numbers"-->
         <!--android:layout_width="0dp"-->
@@ -22,9 +23,8 @@
         <!--android:layout_height="match_parent" />-->
     <FrameLayout android:id="@+id/master_list_step_fragment"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:scaleType="centerInside"/>
+        android:layout_height="match_parent"/>
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
 
