--- a/app/src/main/res/layout/activity_detail_step.xml
+++ b/app/src/main/res/layout/activity_detail_step.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="3"
+    >
 
     <FrameLayout android:id="@+id/master_detail_step_fragment"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:scaleType="centerInside"/>
+        android:layout_height="match_parent"
+        android:layout_weight="1"/>
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
 
