--- a/app/src/main/res/layout/fragment_detail_step.xml
+++ b/app/src/main/res/layout/fragment_detail_step.xml
@@ -2,36 +2,47 @@
 
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:weightSum="5"
+
     android:orientation="vertical">
 
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:id="@+id/playerView"
+        android:layout_weight="2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="0dp"
+        />
 
 
-    <TextView
+        <TextView
 
-        android:id="@+id/receipt_step_description"
-        android:layout_width="match_parent"
+            android:id="@+id/receipt_step_description"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:text="Description"
+            android:textColor="#000"
+            android:layout_weight="1"
+            android:textSize="18sp" />
 
-        android:layout_height="wrap_content"
-        android:text="Description"
-        android:textColor="#000"
-        android:textSize="18sp" />
+        <Button
+            android:id="@+id/prev_button"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="Prev" />
 
-    <Button
-        android:id="@+id/prev_button"
-        android:text="Prev"
-        android:layout_width="match_parent"
-        android:layout_height="40dp" />
-    <Button
-        android:id="@+id/next_button"
-        android:text="Next"
-        android:layout_width="match_parent"
-        android:layout_height="40dp" />
+        <Button
+            android:id="@+id/next_button"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="Next" />
+
 
 
 </LinearLayout>
