--- a/app/src/main/res/layout/fragment_detail_step.xml
+++ b/app/src/main/res/layout/fragment_detail_step.xml
@@ -7,7 +7,7 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="5"
+    android:weightSum="6"
 
     android:orientation="vertical">
 
@@ -22,23 +22,23 @@
         <TextView
 
             android:id="@+id/receipt_step_description"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:text="Description"
             android:textColor="#000"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:textSize="18sp" />
 
         <Button
             android:id="@+id/prev_button"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="Prev" />
 
         <Button
             android:id="@+id/next_button"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="Next" />
