--- a/app/src/main/res/layout/fragment_master_step_list.xml
+++ b/app/src/main/res/layout/fragment_master_step_list.xml
@@ -7,13 +7,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ListView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <!--<ListView-->
+        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--android:id="@+id/images_grid_view"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+    <!--</ListView>-->
+
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/images_grid_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </ListView>
-
-
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
