--- a/app/src/main/res/layout/step_list_item.xml
+++ b/app/src/main/res/layout/step_list_item.xml
@@ -7,7 +7,13 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="2dp">
-
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        card_view:cardCornerRadius="4dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,9 +35,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-
         </LinearLayout>
 
 
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
