--- a/app/src/main/res/layout/fragment_master_step_list.xml
+++ b/app/src/main/res/layout/fragment_master_step_list.xml
@@ -13,7 +13,16 @@
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content">-->
     <!--</ListView>-->
+    <Button
 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="Receipt Ingredients"
+        android:id="@+id/receipt_ingredients"
+        android:textColor="#000"
+        android:textSize="18sp"
+        android:adjustViewBounds="true"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/images_grid_view"
         android:layout_width="match_parent"
