--- a/app/src/main/res/layout/widget_grid_view.xml
+++ b/app/src/main/res/layout/widget_grid_view.xml
@@ -1,49 +1,135 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<!--
-    Copyright (C) 2017 The Android Open Source Project
-
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
-
-        http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
--->
-
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="@dimen/widget_margin" >
 
-    <GridView
-        android:id="@+id/widget_grid_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:numColumns="4"/>
+        android:background="#bbDEDFDE"
+        android:orientation="vertical" >
 
-    <RelativeLayout
-        android:id="@+id/empty_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/recept_widget_title"
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/widgetLayoutMain"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textColor="#ffffff"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:background="#aaDEDFDE"
+            android:orientation="horizontal"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp" >
+
+            <ImageView
+                android:id="@+id/widgetImgLauncher"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/exo_controls_fastforward" />
+
+            <LinearLayout
+                android:id="@+id/widgetTopBar"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:paddingBottom="4dp"
+                android:paddingLeft="8dp"
+                android:paddingTop="4dp" >
+
+                <TextView
+                    android:id="@+id/recept_widget_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/app_name"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="#4B4B4D"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/txvWidgetTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="dharmangsoni.blogspot.in"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="#4B4B4D" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#aaa" />
+
+        <GridView
+            android:id="@+id/widget_grid_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+        </GridView>
+    </LinearLayout>
+    <RelativeLayout
+    android:id="@+id/empty_view"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <TextView
+    android:layout_centerInParent="true"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textAlignment="center"
+    android:textColor="#ffffff"
+    android:textSize="20sp"
+    android:textStyle="bold" />
 
 
     </RelativeLayout>
-
-
 </FrameLayout>
+    <!--//https://dharmangsoni.blogspot.com/2014/03/collection-widget-with-event-handling.html-->
+
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+
+<!--&lt;!&ndash;-->
+    <!--Copyright (C) 2017 The Android Open Source Project-->
+
+    <!--Licensed under the Apache License, Version 2.0 (the "License");-->
+    <!--you may not use this file except in compliance with the License.-->
+    <!--You may obtain a copy of the License at-->
+
+        <!--http://www.apache.org/licenses/LICENSE-2.0-->
+
+    <!--Unless required by applicable law or agreed to in writing, software-->
+    <!--distributed under the License is distributed on an "AS IS" BASIS,-->
+    <!--WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
+    <!--See the License for the specific language governing permissions and-->
+    <!--limitations under the License.-->
+<!--&ndash;&gt;-->
+
+<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
+
+    <!--<GridView-->
+        <!--android:id="@+id/widget_grid_view"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:gravity="center"-->
+        <!--android:numColumns="4"/>-->
+
+    <!--<RelativeLayout-->
+        <!--android:id="@+id/empty_view"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:orientation="vertical">-->
+        <!--<TextView-->
+            <!--android:id="@+id/recept_widget_title"-->
+            <!--android:layout_centerInParent="true"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textAlignment="center"-->
+            <!--android:textColor="#ffffff"-->
+            <!--android:textSize="20sp"-->
+            <!--android:textStyle="bold" />-->
+
+
+    <!--</RelativeLayout>-->
+
+
+<!--</FrameLayout>-->
